Dynamic load API.
Signed-off-by: jmzwcn <jmzwcn@gmail.com>

--- a/example/echo/Makefile
+++ b/example/echo/Makefile
@@ -16,6 +16,9 @@ else
 	SED=sed
 endif
 
+prepare:
+	go install github.com/api-gateway/plugin/...
+
 generate-go:
 	@protoc -I${GOPATH}/src \
 	-I${GOPATH}/src/github.com/api-gateway/third_party \
@@ -32,7 +35,12 @@ generate-go:
 	@$(SED) -i '/google\/api/d' service/*.pb.go
 	@echo Generate successfully.
 
-build:
+parse:prepare generate-go	
+	@protoc -I${GOPATH}/src -I${GOPATH}/src/github.com/api-gateway/third_party \
+	$(shell pwd)/service/*.proto --parse_out=.
+	@echo Parse successfully.
+
+build:parse
 	go build -ldflags="$(LD_FLAGS)" -o bundles/$(SERVICE) internal/cmd/main.go
 
 image:build
